Fixing unwanted spacing when all widgets are removed from the profile header (DT-943)

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -673,7 +673,10 @@ header.bk-header {
     background-repeat: no-repeat;
     background-position:bottom;
     background-size:contain;
-    padding: 20px 0px 10px 0px;
+    .widget {
+        margin-top: 20px;
+        margin-bottom: 10px;
+    }
             .header-left {
                 float:left;
                 width:33%;
